0.4.2 (dev)
  BugFix: The act of moving the mouse over the package list was triggering many
    pkg executions.
  BugFix: Use xdg-open to open files when available if user is running XFCE.
  BugFix: Remote pkg search was not finding all entries (thanks to bsduck).

0.4.1 (2024/08/18)
  BugFix: Added C.UTF-8 default language set for executeCommand function.
  BugFix: Clean the local cache always produced a postponed crash after some
    specific install transactions.
  BugFix: Modified code to find pkg db in DragonFlyBSD.
  BugFix: Added reference to new LGPL v2.1 license.
  Added support to NomadBSD.
  Improvement: Show a "Collecting transaction data..." msg before presenting the transaction 
    dialog, as it can be quite slow on some systems.

0.4.0 (2024/05/23)
  BugFix: When clicking on a outdated pkg inside Output tab, do not go to the Info
    tab if the pkg is not shown in the list.
  BugFix: Update FreeBSD pkg wiki site (thanks to eduardo).
  BugFix: Files tab expand all items by default.
  BugFix: Files tab was not being refreshed when switching to remote search.
  Updated license to LGPL v2.1.
  Show "Installed on" column while searching for remote pkgs.
  Now using the unified qt-sudo project (https://github.com/aarnt/qt-sudo) for privilege escalation.

0.3.3 (2023/09/08)
  BugFix: openFile always left a running file manager even after program close.
  Synced octopkg-doas with LXQt-sudo 1.3.0 version.
  Added a stop button next to the progress bar to cancel running transaction.
  Make the project compatible with both Qt5 and Qt6.

0.3.2 (2022/12/31)
  BugFix: WM testing code now uses ps -aux. 
  BugFix: Test also if doas.conf is available at startup.
  BugFix: Disable Info/Files tab refresh while typing in filter/search line edit.
  BugFix: Updated FreeBSD rss url.
  BugFix: Package search did not work correctly when query string contained a "+" sign.
  BugFix: Refresh of Info/File tabs and focus/key navigation improvements.