@@ -628,10 +628,29 @@ bool MainWindow::isSUAvailable()
 }
 
 /*
+ * Checks if Internet connection is up/down
+ */
+bool MainWindow::isInternetAvailable()
+{
+  bool res=true;
+
+  //Test if Internet access exists
+  if (!UnixCommand::hasInternetConnection())
+  {
+    QMessageBox::critical(this, StrConstants::getError(), StrConstants::getInternetUnavailableError());
+    res=false;
+  }
+
+  return res;
+}
+
+/*
  * Does a repository sync with "pkg update -f" !
  */
 void MainWindow::doCheckUpdates()
 {
+  if (!isInternetAvailable()) return;
+
   m_commandExecuting = ectn_CHECK_UPDATES;
   disableTransactionActions();
   m_unixCommand = new UnixCommand(this);
@@ -797,6 +816,8 @@ void MainWindow::stopTransaction()
  */
 void MainWindow::doSystemUpgrade(SystemUpgradeOptions systemUpgradeOptions)
 {
+  if (!isInternetAvailable()) return;
+
   if (m_systemUpgradeDialog) return;
 
   if(m_callSystemUpgrade && m_numberOfOutdatedPackages == 0)
@@ -1490,6 +1511,8 @@ void MainWindow::toggleSystemActions(const bool value)
  */
 void MainWindow::commitTransaction()
 {
+  if (!isInternetAvailable()) return;
+
   //Are there any remove actions to be commited?
   if(getRemoveTransactionParentItem()->rowCount() > 0 && getInstallTransactionParentItem()->rowCount() > 0)
   {
